option(
    'build_gvc',
    type: 'boolean',
    value: true,
    description: 'Build gnome-volume-control (required for Audio Service).',
)

option(
    'dependency_check',
    type: 'boolean',
    value: true,
    description: 'Check required dependencies.',
)

option(
    'COMMITHASH',
    type: 'string',
    value: '',
    description: 'NOT PUBLIC OPTION: custom commit hash to configure ignis/__commit__.py.in'
)
